[package]
name = "multi_keychain_wallet"
version = "0.0.1"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
bdk_wallet = { version = "2.0.0", default-features = false }
bitcoin = { version = "0.32.6", features = ["serde", "base64"], default-features = false }
miniscript = { version = "12.3.2", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive"] }

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin/rand-std", "miniscript/std", "bdk_wallet/std"]
rusqlite = ["bdk_wallet/rusqlite"]

[dev-dependencies.multi_keychain_wallet]
path = "."
